@@ -1,6 +1,18 @@
 freemed project changelog
 ($Id$)
 
+* Fri May 04 2001 fforest
+   - add calendar.php menu.
+   - main.php use Gear icon for calendar
+   - lib/calendar_functions add new function get_time_string
+     to make 5:5 to 05:05 AM
+   - module_calendar some fixes and enhancements
+   - view_calendar/admin_calendar use new function (above)
+     admin now allows a day to be clicked. implement display
+     method. admin still needs work but view seems ok
+     view now does the javasvript popup window when
+     an appointment is booked.
+   
 * Thu May 03 2001 fforest
    - added lib/module_calendar
    - added modules/admin.calendar 
